zero-schema-macros/tests/ui/fail/53_generated_token_literal.stderr
error[E0451]: field `_private` of struct `__ZeroSchemaInputAccessToken` is private
  --> tests/ui/fail/53_generated_token_literal.rs:17:25
   |
17 |     let token = Token { _private: () };
   |                         ^^^^^^^^^^^^ private field
